--- a/ScooterInstanceAPI/Properties/launchSettings.json
+++ b/ScooterInstanceAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/scooterinstance",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "ScooterInstanceAPI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/scooterinstance",
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5004;http://localhost:5005",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
