--- a/UserAPI/UserAPI.csproj
+++ b/UserAPI/UserAPI.csproj
@@ -14,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
+    <PackageReference Include="Syncfusion.EJ2.Blazor" Version="17.4.0.42" />
   </ItemGroup>
 
   <ItemGroup>
