--- a/ScooterInstanceAPI/ScooterInstanceAPI.csproj
+++ b/ScooterInstanceAPI/ScooterInstanceAPI.csproj
@@ -5,6 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\**" />
+    <Content Remove="Migrations\**" />
+    <EmbeddedResource Remove="Migrations\**" />
+    <None Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Migrations\20200111134758_scooterInstMig.cs" />
+    <Compile Include="Migrations\20200111134758_scooterInstMig.Designer.cs" />
+    <Compile Include="Migrations\ContextModelSnapshot.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
@@ -18,10 +31,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TrotIS\TrotIS.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 
